2008-12-12  Claudio Saavedra  <csaavedra@igalia.com>

	* doc/hildon-sections.txt: Add missing entries for new methods.

2008-12-12  Alejandro G. Castro	 <alex@igalia.com>

	Added API to pannable are in order to get its adjustments. We
	added two properties to manage the values we had in the private
	structure.

	* src/hildon-pannable-area.c:
	(hildon_pannable_area_class_init): Added hadjustment and
	vadjustment properties in order to expose horizontal and vertical
	adjustment.
	(hildon_pannable_area_get_property),
	(hildon_pannable_area_set_property): Added code to handle the new
	properties
	(hildon_pannable_area_get_hadjustment),
	(hildon_pannable_area_get_vadjustment): API functions to get the
	adjustments
	* src/hildon-pannable-area.h:
	(hildon_pannable_area_get_hadjustment),
	(hildon_pannable_area_get_vadjustment): API functions to get the
	adjustments

2008-12-12  Alejandro G. Castro	 <alex@igalia.com>

	Fixed some leaks, after valgrinding.

	* src/hildon-touch-selector.c:
	(_default_print_func): Fixed a leak.
	(hildon_touch_selector_append_column): Fixed a leak.
	* src/hildon-date-button.c:
	(hildon_date_button_init): Fixed a leak.
	* src/hildon-date-selector.c
	(hildon_date_selector_finalize): Fixed a leak.

2008-12-12  Claudio Saavedra  <csaavedra@igalia.com>

	Based on a patch by Christian Dywan (christian@imendio.com)

	* src/hildon-gtk.c: (+hildon_gtk_hscale_new): Create a hildonized style
	GtkHScale.
	* src/hildon-gtk.h: Add definition.

	Fixes: NB#93744 (Tapping should jump to location on GtkScale)

2008-12-11  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-picker-button.c: (hildon_picker_button_init),
	(hildon_picker_button_new): Set the HildonButton::style property
	in the init method, to propagate the value to the derived classes.

2008-12-11  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-button.c: (hildon_button_class_init): Do not make
	the "style" property a construct property.

2008-12-11  Alberto Garcia  <agarcia@igalia.com>