@@ -1131,6 +1131,7 @@ hildon_gtk_icon_view_new_with_model
 hildon_gtk_icon_view_set_ui_mode
 hildon_gtk_window_set_progress_indicator
 hildon_gtk_hscale_new
+hildon_gtk_vscale_new
 </SECTION>
 
 <SECTION>
